--- a/task1.html
+++ b/task1.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Анкета</title>
 </head>
+
 <body>
+    
     <center>
-    <h1>Мой профиль</h1>
-    <a href="https://github.com/">
-        <img src="GitHub-logo.png" title="Ссылка на GitHub" width="20%" height="20%" alt="Нет картинки">
-    </a>
-    <a href="index.html "  title="Ссылка на анкету" style="text-decoration: none">
-    <h2>Ссылка на анкету</h2>
-    </a>
-    <a href="index.html#git"  title="Якорная ссылка на GitHub на другой странице" >
-    <p >GitHub</p>
-    </a>
+        <h1>Мой профиль</h1>
+        <a href="https://github.com/">
+            <img src="images/GitHub-logo.png" title="Ссылка на GitHub" width="20%" height="20%" alt="Нет картинки">
+        </a>
+        <a href="index.html" title="Ссылка на анкету" style="text-decoration: none">
+            <h2> Ссылка на анкету</h2>
+        </a>
+        <a href="task2.html" title="Ссылка на карточку" style="text-decoration: none">
+            <h2>Ссылка на карточку</h2>
+        </a>
+        <a href="task3.html" title="Ссылка на карточку" style="text-decoration: none">
+            <h2>Ссылка на практическое задание №3</h2>
+        </a>
+        <a href="index.html#git" title="Якорная ссылка на GitHub на другой странице">
+            <p>GitHub</p>
+        </a>
+        
+    </center>
 </body>
+
 </html>
