--- a/task1.html
+++ b/task1.html
@@ -24,6 +24,8 @@
         <a href="task3.html" title="Ссылка на карточку" style="text-decoration: none">
             <h2>Ссылка на практическое задание №3</h2>
         </a>
+                <a href="task4.html" title="Ссылка на карточку" style="text-decoration: none">
+            <h2>Ссылка на практическое задание №4</h2>
         <a href="index.html#git" title="Якорная ссылка на GitHub на другой странице">
             <p>GitHub</p>
         </a>
