--- a/index.html
+++ b/index.html
@@ -1,47 +1,40 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
     <link rel="stylesheet" href="main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Страница о себе</title>
+    <title>Анкета</title>
 </head>
 
 <body>
-    <a href="#git" title="Якорная ссылка на значок внизу">
-        <p>GitHub</p>
-    </a>
-    <a href="task1.html" title="На главную">На главную</a>
-    <h1>Практическое задание №1</h1>
-    <hr>
+    
     <center>
-        <p class="fw-100">Анкета о себе</p>
-    <img src="images/image2.jpg" alt="Нет картинки" width="15%" title="картинка" border="1">
-    <a href="https://ya.ru" alt="Нет картинки" width="100%"></a>
-    <br>Всем привет! Меня зовут Андрей.
-    <p>&emsp;Я являюсь участником курса "Web программист с нуля до первых проектов. Хочу научиться новым навыкам и улучшить имеющиеся.</p>
-    <hr class="line2">
+        <h1>Мой профиль</h1>
+        <a href="https://github.com/">
+            <img src="images/GitHub-logo.png" title="Ссылка на GitHub" width="20%" height="20%" alt="Нет картинки">
+        </a>
+        <a href="task1.html" title="Ссылка на анкету" style="text-decoration: none">
+            <h2> Ссылка на анкету</h2>
+        </a>
+        <a href="task2.html" title="Ссылка на карточку" style="text-decoration: none">
+            <h2>Ссылка на карточку</h2>
+        </a>
+        <a href="task3.html" title="Ссылка на карточку" style="text-decoration: none">
+            <h2>Ссылка на практическое задание №3</h2>
+        </a>
+                <a href="task4.html" title="Ссылка на карточку" style="text-decoration: none">
+            <h2>Ссылка на практическое задание №4</h2>
+            </a>
+                <a href="task5.html" title="Ссылка на карточку" style="text-decoration: none">
+            <h2>Ссылка на практическое задание №5</h2>
+            </a>
+        <a href="index.html#git" title="Якорная ссылка на GitHub на другой странице">
+            <p>GitHub</p>
+        </a>
+        
     </center>
-    <p class="fw-100">Стек навыков</p>
-    <ul type="disc">
-        <li style="color: rgb(0, 141, 141);">HTML</li>
-        <li>CSS</li>
-        <li style="color: rgb(1, 153, 102);">Figma</li>
-        <li>PhotShop</li>
-    </ul>
-    <hr class="line2">
-    <p class="fw-100">Увлечения</p>
-    <ol type="I">
-        <li>Чтение</li>
-        <li>Тренажерный зал</li>
-    </ol>
-    </ul>
-    <hr class="line2">
-    <a class="link" href="https://github.com/">
-        <img id="git" src="images/GitHub-logo.png" width="10%" height="10%" alt="Нет картинки" title="Ссылка на GitHub">  
-    </a>
-    <a class="link" href="task1.html" title="Ссылка на главную" style="text-decoration: none">Ссылка на главную</a>
 </body>
 
 </html>
