--- a/task2.html
+++ b/task2.html
@@ -13,7 +13,7 @@
      <div class="CL">
         <div id="clock"></div> <!-- Элемент для отображения времени -->
     </div>
-    <a class="menu" href="task1.html" title="На главную">На главную</a>
+    <a class="menu" href="index.html" title="На главную">На главную</a>
     <div class="card">
         <a href="" title="Добавить в избранное">
             <img class="icon" width="30" src="images/heart.png" alt="Избранное">
