--- a/task3.html
+++ b/task3.html
@@ -15,7 +15,7 @@
         Site name
        </a>
        <nav>
-            <a href="task1.html" class="">На главную</a>
+            <a href="index.html" class="">На главную</a>
             <a href="#" class="">Page</a>
             <a href="#" class="">Page</a>
             <button>Button</button>
