--- a/task4.html
+++ b/task4.html
@@ -20,7 +20,7 @@
             Riverside
         </a>
         <nav>
-            <a href="task1.html" style="color: rgb(241, 0, 0);">На главную</a>
+            <a href="index.html" style="color: rgb(241, 0, 0);">На главную</a>
             <a href="#">Event us</a>
             <a href="#">Contact us</a>
             <button>Book</button>
