--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                 <a href="task5.html" title="Ссылка на карточку" style="text-decoration: none">
             <h2>Ссылка на практическое задание №5</h2>
             </a>
+                <a href="task6.html" title="Ссылка на карточку" style="text-decoration: none">
+            <h2>Ссылка на практическое задание №6</h2>
+            </a>
         <a href="index.html#git" title="Якорная ссылка на GitHub на другой странице">
             <p>GitHub</p>
         </a>
